--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,15 @@
     "start": "vite --host"
   },
   "dependencies": {
-    "solid-js": "^1.6.7",
     "@solidjs/router": "^0.8.2",
     "@suid/icons-material": "^0.5.8",
     "@suid/material": "^0.10.1",
     "chart.js": "^4.2.1",
     "chartjs-adapter-luxon": "^1.3.1",
     "flatpickr": "^4.6.13",
-    "luxon": "^3.2.1"
+    "luxon": "^3.2.1",
+    "solid-js": "^1.6.7",
+    "tar": "^6.1.14"
   },
   "devDependencies": {
     "@suid/vite-plugin": "^0.1.2",
